# ros_template

./: README.md
autoCreateTemplate/src/: CMakeLists.txt
autoCreateTemplete/: CMakeLists.txt  createRosCppTemplete.cpp
autoCreateTemplete/src/: CMakeLists.txt
autoCreateTemplete/src/genRosCppTemplete/: CMakeLists.txt
catkin_ws/src/cpp_templete/: CMakeLists.txt  cpp_temple.cpp  package.xml
catkin_ws/src/cpp_templete/launch/: cpp_templete.launch
catkin_ws/src/cpp_templete/src/: cpp_temple.cpp  cpp_temple.h
catkin_ws/src/python_templete/: CMakeLists.txt  package.xml
catkin_ws/src/python_templete/launch/: py_templete.launch
catkin_ws/src/python_templete/src/: py_templete.py  ros_templete.py
