#============================================================================
# List the subdirectories to build...
#============================================================================
ADD_SUBDIRECTORY(genRosCppTemplete)
##############################################################################
#                           END of CMakeLists.txt
##############################################################################

