#--------------------------------------------------------
# The CMakeLists.txt for:                 createroscpptemplete.cpp
# Author(s):                              CTHung
#--------------------------------------------------------

SET(SRC
    createRosCppTemplete.cpp
)

ADD_EXECUTABLE(createRosCppTemplete ${SRC})

TARGET_LINK_LIBRARIES(createRosCppTemplete
    )
